# LLM-Production-Reliability-Platform

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  test_websocket.py
backend/apps/foundation/: README.md  main.py
backend/apps/foundation/api/: app.py  deps.py  routes_chat.py
backend/apps/foundation/cache/: redis_cache.py
backend/apps/foundation/config/: loader.py  settings.py
backend/apps/foundation/core/: budgets.py  fallback.py  guardrails.py  llm_service.py  router.py
backend/apps/foundation/events/: publisher.py
backend/apps/foundation/guardrails/: content_filter.py  input_validator.py  models.py  output_validator.py  pii_detector.py  pipeline.py  prompt_injection.py  (+1 more)
backend/apps/intelligence/: README.md  main.py
backend/apps/observability/: README.md  api_main.py  main.py  worker_main.py
backend/apps/orchestration/: README.md  main.py
backend/apps/presentation/: README.md  main.py
backend/configs/: budgets.yaml  guardrails.yaml  observability.yaml  providers.yaml  routing.yaml
backend/shared/errors/: codes.py  exceptions.py
backend/shared/events/: event_bus.py  publisher.py
backend/shared/interfaces/: event_bus.py  llm.py  retrieval.py  workflows.py
backend/shared/schemas/: chat.py  common.py  errors.py  events.py
backend/shared/utils/: file_parser.py  ids.py  json.py  time.py
backend/tests/contract/: test_schemas_chat.py  test_schemas_events.py
backend/tests/integration/: test_e2e_mvp.py
backend/tests/unit/: test_events.py  test_guardrails.py  test_router.py
(+58 files in other folders)
